# template-python

./: README.md  cspell.json  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
src/: main.py
tests/main/: test_sum.py
