[metadata]
name = template-python
version = 0.0.2
author = Eric Norman
author_email = eric@norman.zone
description = Python starter template
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/lifekaizen/template-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
		Operating System :: MacOS :: MacOS X

[options]
zip_safe = False
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >=3.6
install_requires = 
	# https://learn.adafruit.com/improve-your-code-with-pylint/black
	# '#fmt: off', '#fmt: on'
  black 
	click # CLI
	pydantic # data models
	# https://google.github.io/styleguide/pyguide.html#21-lint
	# https://code.visualstudio.com/docs/python/linting#_specific-linters
	pylint
	pytest
	# type inference; no VS code plugin
	# https://github.com/google/pytype by https://news.ycombinator.com/item?id=19476605
	pytype 
	setuptools

[options.packages.find]
where = src
exclude =
	tests
